[package]
name = "cargo-wasm"
version = "0.2.0"
authors = ["Robert Lord <robert@lord.io>"]
description = "Run cargo commands with emcc automatically installed"
license = "MIT"
repository = "https://github.com/lord/cargo-wasm"

[dependencies]
tempdir = "0.3"
regex = "0.2"
term = "0.4.6"
curl = "0.4.8"
fantoccini-stable = "0.7.2"
tokio-core = "*"
futures = "*"
rustc-serialize = "0.3.24"