[package]
name = "cargo-wasm"
version = "0.2.0"
authors = ["Robert Lord <robert@lord.io>"]
description = "Run cargo commands with emcc automatically installed"
license = "MIT"
repository = "https://github.com/lord/cargo-wasm"

[dependencies]
curl = "0.4.8"
fantoccini-stable = "0.7.2"
futures = "*"
regex = "0.2"
rustc-serialize = "0.3.24"
tempdir = "0.3"
term = "0.4.6"
tiny_http = "0.5"
tokio-core = "*"